tests/purs/failing/2616.out
Error found:
in module [33mMain[0m
at tests/purs/failing/2616.purs:9:1 - 9:38 (line 9, column 1 - line 9, column 38)

  No type class instance was found for
  [33m                           [0m
  [33m  Prim.RowList.RowToList r1[0m
  [33m                         t2[0m
  [33m                           [0m

while solving type class constraint
[33m                          [0m
[33m  Data.Ord.Ord (Record r1)[0m
[33m                          [0m
while applying a function [33mcompare[0m
  of type [33mOrd t0 => t0 -> t0 -> Ordering[0m
  to argument [33m$l2[0m
while inferring the type of [33mcompare $l2[0m
in value declaration [33mordFoo[0m

where [33mr1[0m is a rigid type variable
        bound at (line 0, column 0 - line 0, column 0)
      [33mt0[0m is an unknown type
      [33mt2[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

